# K8s-ops-crew

./: .env.example  Makefile  README.md  pyproject.toml  uv.toml
.roo/: mcp.json
infra/: kind-cluster.yaml
infra/rbac/: clusterrole.yaml  clusterrolebinding.yaml  serviceaccount.yaml
k8s_ops_crew/: __init__.py  __main__.py  config.py  graph.py  llm.py  main.py  state.py
k8s_ops_crew/agents/: __init__.py  diagnostics.py  supervisor.py
k8s_ops_crew/tools/: __init__.py  get_events.py  k8s_client.py  list_nodes.py  list_pods.py  top_nodes.py
memory-bank/: activeContext.md  progress.md
plans/: phase1.md
tests/: conftest.py  test_diagnostics_agent.py  test_graph.py  test_tools.py
