[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project]
name = "k8s-ops-crew"
version = "0.1.0"
description = "Autonomous multi-agent system for Kubernetes operations and maintenance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Yaron Pdut" }]

dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-ollama>=0.2",
    "langchain-core>=0.3",
    "kubernetes>=29.0",
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
k8s-ops-crew = "k8s_ops_crew.main:main"

[tool.hatch.build.targets.wheel]
packages = ["k8s_ops_crew"]

# ---------------------------------------------------------------------------
# Ruff (linter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["k8s_ops_crew"]

# ---------------------------------------------------------------------------
# Black (formatter)
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=k8s_ops_crew --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*", "k8s_ops_crew/main.py"]
